--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,8 @@
-__pycache__
-src/__pycache__
-src/__init__.py
+__pycache__/*
+src/__pycache__*
 data/*
-/CML
 model/*
-artifacts/
-artifacts
+artifacts/*
 
 # Ignore CML folder to avoid uploading unwanted files
 /CML
