Worked on the report starting the model architecture and methodology section.

--- a/config.yaml
+++ b/config.yaml
@@ -1,5 +1,5 @@
 data:
-  DATASET_PATH: "CML/data/merged_dataset.nosync"
+  DATASET_PATH: 'path/to/data'
   IMAGE_SIZE: 224
   BATCH_SIZE: 256
   NUM_WORKERS: 12
