--- a/config.yaml
+++ b/config.yaml
@@ -1,5 +1,5 @@
 data:
-  DATASET_PATH: 'path/to/data'
+  DATASET_PATH: 'CML/data/merged_dataset.nosync'
   IMAGE_SIZE: 224
   BATCH_SIZE: 256
   NUM_WORKERS: 12
@@ -8,9 +8,12 @@ data:
   VAL_RATIO: 0.1 
 
 model:
+  TYPE_BIOCLIP: 'hf-hub:imageomics/bioclip'
+  TYPE_CLIP: 
   # BioCLIP/OpenAI Normalization stats
   MEAN: [0.48145466, 0.4578275, 0.40821073]
   STD:  [0.26862954, 0.26130258, 0.27577711]
+
 
 hardware:
   HARDWAREDEVICE: 'mps'
