--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,11 @@
-__pycache__/
+__pycache__
 src/__pycache__
 src/__init__.py
 data/*
 /CML
-model/
+model/*
 artifacts/
+artifacts
 
 # Ignore CML folder to avoid uploading unwanted files
 /CML
