--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,8 @@
 __pycache__/*
 src/__pycache__*
 data/*
+artifacts
 model/*
-artifacts/*
 
 # Ignore CML folder to avoid uploading unwanted files
 /CML
